# cosmos

./: AUTHORS  ChangeLog  requirements.txt  setup.cfg  setup.py  tox.ini
.eggs/pbr-5.1.2-py2.7.egg/EGG-INFO/: RECORD
cosmos/: version.py
cosmos/api/: app.py  app.wsgi  common.py  config.py  expose.py  hooks.py
cosmos/api/controllers/: base.py  link.py  root.py
cosmos/api/controllers/v1/: __init__.py  demo.py  half_plus_two.py  ocr.py  types.py
cosmos/api/controllers/v1/ocr/: __init__.py  general.py
cosmos/api/controllers/v1/schemas/: demos.py  half_plus_two_schema.py  ocr_general_schema.py
cosmos/api/middleware/: __init__.py  parsable_error.py
cosmos/api/validation/: __init__.py  parameter_types.py
cosmos/api/version/: api_version_request.py  microversions.py  versioned_method.py
cosmos/cmd/: api.py  dbsync.py  demoapi.py
cosmos/common/: config.py  constants.py  exception.py  flow_utils.py  i18n.py  policy.py  service.py  utils.py
cosmos/conf/: __init__.py  api.py  default.py
cosmos/core/: driver.py  manager.py
cosmos/core/drivers/native/: adapter.py  driver.py  ocr.py
cosmos/core/drivers/tfserving/: adapter.py  driver.py  rest.py
cosmos/core/flows/: half_plus_two_flow.py  ocr_general.py  predict.py
cosmos/db/: api.py  migration.py
cosmos/db/sqlalchemy/: api.py  migration.py  models.py
cosmos/db/sqlalchemy/alembic/: README  env.py
cosmos/objects/: __init__.py  base.py  demo.py  fields.py  half_plus_two.py
etc/cosmos/: README.cosmos.conf  cosmos.conf.sample
tools/config/: cosmos-config-generator.conf  cosmos-policy-generator.conf
(+4 files in other folders)
