[metadata]
name = cosmos
summary = PandoraGo brain
description-file =
    README.rst
author = PandoraGo
author-email = pandorago@pandorago.com
home-page = https://wiki.pandorago.com/wiki/Cosmos
classifier =
    Environment :: PandoraGo
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: All rights reserved
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    cosmos

[entry_points]
console_scripts =
    pandorago-cosmos-api = cosmos.cmd.api:main
    pandorago-cosmos-dbsync = cosmos.cmd.dbsync:main
cosmos.database.migration_backend =
    sqlalchemy = cosmos.db.sqlalchemy.migration

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cosmos/locale
domain = cosmos

[update_catalog]
domain = cosmos
output_dir = cosmos/locale
input_file = cosmos/locale/cosmos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cosmos/locale/cosmos.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
